@@ -1,4 +1,5 @@
 - Fix setting data on html_options when threadsafe is enabled
+- Fill nested association on render field, as done in new action
 
 = 3.6.13
 - Fix link caching on action when threadsafe is enabled
